; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_mkdir.c_mkdir_p_internal.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_mkdir.c_mkdir_p_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EEXIST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mkdir_p_internal(i8* %0, i8* %1, i32 %2, i32 (i8*, i32)* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32 (i8*, i32)*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 (i8*, i32)* %3, i32 (i8*, i32)** %9, align 8
  %11 = load i32 (i8*, i32)*, i32 (i8*, i32)** %9, align 8
  %12 = icmp ne i32 (i8*, i32)* %11, @mkdir
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load i8*, i8** %6, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = load i32, i32* %8, align 4
  %18 = load i32 (i8*, i32)*, i32 (i8*, i32)** %9, align 8
  %19 = call i32 @mkdir_parents_internal(i8* %15, i8* %16, i32 %17, i32 (i8*, i32)* %18)
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* %10, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %4
  %23 = load i32, i32* %10, align 4
  store i32 %23, i32* %5, align 4
  br label %43

24:                                               ; preds = %4
  %25 = load i32 (i8*, i32)*, i32 (i8*, i32)** %9, align 8
  %26 = load i8*, i8** %7, align 8
  %27 = load i32, i32* %8, align 4
  %28 = call i32 %25(i8* %26, i32 %27)
  store i32 %28, i32* %10, align 4
  %29 = load i32, i32* %10, align 4
  %30 = icmp slt i32 %29, 0
  br i1 %30, label %31, label %42

31:                                               ; preds = %24
  %32 = load i32, i32* %10, align 4
  %33 = load i32, i32* @EEXIST, align 4
  %34 = sub nsw i32 0, %33
  %35 = icmp ne i32 %32, %34
  br i1 %35, label %40, label %36

36:                                               ; preds = %31
  %37 = load i8*, i8** %7, align 8
  %38 = call i64 @is_dir(i8* %37, i32 1)
  %39 = icmp sle i64 %38, 0
  br i1 %39, label %40, label %42

40:                                               ; preds = %36, %31
  %41 = load i32, i32* %10, align 4
  store i32 %41, i32* %5, align 4
  br label %43

42:                                               ; preds = %36, %24
  store i32 0, i32* %5, align 4
  br label %43

43:                                               ; preds = %42, %40, %22
  %44 = load i32, i32* %5, align 4
  ret i32 %44
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @mkdir(i8*, i32) #1

declare dso_local i32 @mkdir_parents_internal(i8*, i8*, i32, i32 (i8*, i32)*) #1

declare dso_local i64 @is_dir(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
